# brain-norm

./: BIC_testfold0.pkl  EXPV_testfold0.pkl  LICENSE  MSLL_testfold0.pkl  NLL_testfold0.pkl  README.md  RMSE_testfold0.pkl  Rho_testfold0.pkl  SMSE_testfold0.pkl  Z_testfold0.pkl  pRho_testfold0.pkl  pyproject.toml  requirements.txt  setup.py  yhat_testfold0.pkl  ys2_testfold0.pkl
Models/: meta_data.md
brainnorm/: evaluation.py  main.py  normative.py  predict.py  scores.py  utils.py
data/: age.csv  cov_test_fold0.pkl  cov_train_fold0.pkl  resp_test_fold0.pkl  resp_train_fold0.pkl
tests/: test_normative.py  test_utils.py
